# SIGA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
AMGX_config/: SOLVER_CONFIG_FGMRES.json  SOLVER_CONFIG_INUSE.json  SOLVER_CONFIG_PCG.json
document/SIGA_paper/: siga_paper.tex
document/Theory Behind smallestCondensedMechanicalEigenpair/: smallest_condensed_mechanical_eigenpair_theory.tex
document/flexoelectric_pure_bending_generalized_traction/: flexoelectric_pure_bending_generalized_traction.tex  flexoelectric_solution_shape_comparison.tex
example/: 2DBeamBending_cornerPointLoad.cu  2DBeamBending_traction.cu  CMakeLists.txt  Geometry.cu  cooks.cu  electroelasticity_2DSquare.cu  electroelasticity_2DTrapezoid.cu  flexoelectricity_2DBeamBending_followerMoment.cu  flexoelectricity_2DBeamBuckling.cu  flexoelectricity_2DFilmWrinkling.cu  flexoelectricity_CodonyOpenCircuitCantilever.cu  flexoelectricity_OpenCircuitCantilever.cu  nonlinearElasticity_2DBeamBending_followerMoment.cu  nonlinearElasticity_2DBeamBuckling.cu  strainGradient_2DBeamBending_cornerPointLoad.cu  strainGradient_2DBeamBending_doubleStress.cu  strainGradient_2DBeamBending_followerMoment.cu  strainGradient_2DBeamBuckling.cu  strainGradient_2DTrapezoid.cu  test.cu  test_3D.cu
example/exampleParameters/: flexoelectricity_2DBeamBending_followerMoment_parameters.txt  flexoelectricity_2DFilmWrinkling_parameters.txt  nonlinearElasticity_2DBeamBending_followerMoment_parameters.txt  strainGradient_2DBeamBending_doubleStress_parameters.txt  strainGradient_2DBeamBending_followerMoment_parameters.txt  strainGradient_2DBeamBuckling_parameters.txt
pyscript/: convert_gauss_point_tsv_to_mat.py  plotElectricPotential_l0.py  plot_electrode_potential_vs_length_ratio.py  plot_electrode_potential_vs_length_ratio_kv_units.py  plot_electrode_potential_vs_num_elements.py
src/: AMGXEigenSolver.cu  AMGXEigenSolver.h  Assembler.cu  Assembler.h  Boundary.cpp  Boundary.h  BoundaryCondition.h  BoundaryCondition_d.h  Boundary_d.h  BoxTopology.h  BoxTopology_d.cu  BoxTopology_d.h  CMakeLists.txt  DeviceArray.cu  DeviceArray.h  DeviceCSRMatrix.cu  DeviceCSRMatrix.h  DeviceMatrix.cu  DeviceMatrix.h  DeviceMatrixView.cu  DeviceMatrixView.h  DeviceObjectArray.cu  DeviceObjectArray.h  DeviceObjectPointer.h  DeviceVector.cu  DeviceVector.h  DeviceVectorView.cu  DeviceVectorView.h  DofMapper.cpp  DofMapper.h  DofMapperDeviceView.h  DofMapperInterleaved.h  DofMapper_d.h  DofMappersDeviceData.h  Function.cu  Function.h  GPUAssembler.cu  GPUAssembler.h  GPUAssemblySupport.h  GPUElasticityAssembler.h  (+76 more)
